[gd_scene load_steps=6 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://fonts/main-text.fnt" type="BitmapFont" id=2]
[ext_resource path="res://plane.tscn" type="PackedScene" id=3]
[ext_resource path="res://telaInicial/sprites/btn-voltar.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource/name = "tutorial"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("instructions:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 4.8, 6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("instructions:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 4.8, 6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="fuel-label" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 19.0
margin/top = 8.0
margin/right = 64.0
margin/bottom = 33.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Pontos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pontos" type="Label" parent="ui/fuel-label"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 79.0
margin/top = 1.0
margin/right = 119.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.843137, 0.482353, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "0px"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gameover" type="Panel" parent="ui"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/min_size = Vector2( 200, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 108.0
margin/top = 65.0
margin/right = -92.0
margin/bottom = -35.0

[node name="Label" type="Label" parent="ui/gameover"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 48.0
margin/top = 37.0
margin/right = -47.0
margin/bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Deseja Continuar?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="ui/gameover"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 53.0
margin/right = 88.0
margin/bottom = 84.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Yes"
flat = false

[node name="Button1" type="Button" parent="ui/gameover"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 53.0
margin/right = 168.0
margin/bottom = 84.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "No"
flat = false

[node name="distance-label-label" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 297.0
margin/top = 8.0
margin/right = 387.0
margin/bottom = 33.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Tempo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="distance-label" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 397.0
margin/top = 9.0
margin/right = 437.0
margin/bottom = 34.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.843137, 0.482353, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "0px"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 434, 168 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 3.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 335, 168 )
MAX_FUEL = 1
fuel = 0
be_quiet = false

[node name="instructions" type="Label" parent="."]

visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 231.0
margin/top = 101.0
margin/right = 439.0
margin/bottom = 126.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Pressione Espa√ßo para voar!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cloudTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="gasTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="tutorialAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/tutorial = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="voltar" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 504.0
margin/top = -30.0
margin/right = 615.0
margin/bottom = 77.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="ui/gameover/Button" to="." method="continue_game"]

[connection signal="pressed" from="ui/gameover/Button1" to="." method="quit_game"]

[connection signal="timeout" from="cloudTimer" to="." method="create_cloud"]

[connection signal="timeout" from="gasTimer" to="." method="create_gas"]

[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]


